# hypercam

./: .gitignore  .gitmodules  TODO.md  main.py  pyproject.toml  pyrightconfig.json
CPP/: .gitignore
CPP/openeb-modules/: CMakeLists.txt  README.md
CPP/openeb-modules/src/: event-tracker-python.cpp  event-tracker.h  raw-cutter.cpp
conf/: config.yaml
lab_notes/: Transitions CRLB to rate based to appropriately model accumulation time..md
lab_notes/00_Daily/: 04162026-clock-drift.md
lab_notes/01_Weekly/: derivation_next_steps.md
modules/openeb-modules/: CMakeLists.txt
modules/openeb-modules/src/: stc-filter.cpp
proofs/: lake-manifest.json  lakefile.toml
reports/crlb_proof/: crlb_dvs.aux  crlb_dvs.fdb_latexmk  crlb_dvs.fls  crlb_dvs.tex
src/notebooks/: cramer_rao.py  crlb.vsnb  crlb_mask_results.csv  crlb_results.csv  crlb_results_old_1.csv  crlb_results_old_2.csv  plot_crlb.py  pyproject.toml
src/notebooks/utils/: mtqdm.py
src/scripts/: justfile
src/scripts/event-tracking/: experiment9-params.json  main.py  pyproject.toml
src/scripts/event-tracking/output/8335/: recording_2026-03-30_13-26-25_test_7-tracked.parquet  recording_2026-03-30_13-27-45_test_8-tracked.parquet  recording_2026-03-30_13-40-06_test_9-tracked.parquet
src/scripts/mae_processing/: main.py  plot.py  pyproject.toml  tracking_video.py
src/scripts/object-tracking-test/: .position  main.py  pyproject.toml  tests.yaml  tracking_log.csv
src/scripts/split-tracking-video/: frame.np.npy  frame.npy  main.py  pyproject.toml
stubs/: metavision_hal.pyi  metavision_sdk_base.pyi  metavision_sdk_core.pyi  metavision_sdk_stream.pyi  metavision_sdk_ui.pyi
stubs/metavision_core/event_io/: __init__.pyi  adaptive_rate_events_iterator.pyi  box_npy_reader.pyi  dat_tools.pyi  h5_io.pyi  (+7 more)
stubs/metavision_modules/: __init__.pyi  raw_cutter_py.pyi  stc_filter.pyi
(+11 files in other folders)
