[project]
name = "event-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "filterpy>=1.4.5",
    "h5py>=3.16.0",
    "matplotlib>=3.10.8",
    "numpy<2.0",
    "optuna>=4.8.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "polars>=1.39.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
]
[tool.uv.workspace]
members = [
  "src/scripts/event-tracking"
]
